argocd/base/resources/network-policies/monitoring/allow-gateway-ingress.yaml
# CiliumNetworkPolicy to allow traffic from Cilium Gateway API
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-ingress
  namespace: monitoring
spec:
  endpointSelector: {}
  ingress:
    # Allow Cilium Gateway API traffic (uses reserved:ingress identity)
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
            - port: "3100"
              protocol: TCP
            - port: "9090"
              protocol: TCP
